--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://sakuard.github.io"
+url: "https://github.com/Sakuard/Sakuard.github.io"
 
 github:
   username: Sakuard # change to your GitHub username
@@ -39,7 +39,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     - https://www.linkedin.com/in/%E6%9F%8F%E5%84%92-%E9%BB%83-19b8a4213/
-    - https://github.com/Sakuard # change to your GitHub homepage
+    - https://github.com/Sakuard/Sakuard.github.io # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
 
